--- a/app.json
+++ b/app.json
@@ -2,8 +2,20 @@
   "expo": {
     "name": "expo-camera-app",
     "slug": "expo-camera-app",
-    "version": "1.0.0",
-    "assetBundlePatterns": ["**/*"]
+    "version": "1.1.0",
+    "assetBundlePatterns": ["**/*"],
+    "extra": {
+      "eas": {
+        "projectId": "b6626ce9-0ebd-4dfa-93ed-01fa2efb753f"
+      }
+    },
+    "android": {
+      "config": {
+        "keystoreAlias": "camera-app",
+        "keystorePassword": "camera-app",
+        "keystoreKeyPassword": "camera-app"
+      }
+    }
   },
   "plugins": [
     [
