--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.15",
-    "expo-camera": "^13.6.0",
-    "expo-file-system": "^15.6.0",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.5",
     "expo-image-crop": "^1.0.4",
-    "expo-image-manipulator": "^11.5.0",
-    "expo-image-picker": "^14.5.0",
-    "expo-media-library": "^15.6.0",
-    "expo-permissions": "^14.4.0",
-    "expo-print": "^12.6.0",
-    "expo-sharing": "^11.7.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "~14.2.1",
+    "expo-print": "~12.4.2",
+    "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.5",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-pdf": "^6.7.3"
